# zwire-host

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: hud-static.css  hud-theme.js  index.html  report.html
src/: api.rs  bus.rs  exec.rs  fsops.rs  hooks.rs  hostlog.rs  jobs.rs  lib.rs  main.rs  osops.rs  peer.rs  procs.rs  proto.rs  pty.rs  session.rs  store.rs  stryke_lsp.rs  stryke_runner.rs  sysmon.rs  tauri_theme.rs  theme_watch.rs  transport.rs  txn.rs  watch.rs  zbus.rs  zbus_stub.rs
tests/: protocol.rs  wire_conformance.rs
